--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,19 +1,15 @@
-<div class="row">
-    <div class="col s12">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <nav>
+                <div class="nav-wrapper">
+                    <ul class="nav navbar-nav left" menu="admin"></ul>
+                </div>
+            </nav>
 
-    </div>
-</div>
-
-<div class="row">
-    <div class="col s12">
-        <nav>
-            <div class="nav-wrapper">
-                <ul class="nav navbar-nav left" menu="admin"></ul>
+            <div class="section">
+                <router-outlet></router-outlet>
             </div>
-        </nav>
-
-        <div class="section">
-            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
