--- a/src/app/components/credit-union/loan-calculator.component.html
+++ b/src/app/components/credit-union/loan-calculator.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col s12 page-content">
+        <div class="col-sm-12 page-content">
             <h1>Loan calculator</h1>
             <p>This calculator is for guidance purposes only. Please contact us for exact figures on 0131 474 8003 or <a href="mailto:credit.union@scvo.org.uk">credit.union@scvo.org.uk</a></p>
 
