--- a/src/app/components/post/post-list.component.html
+++ b/src/app/components/post/post-list.component.html
@@ -1,94 +1,149 @@
 <div class="container-fluid">
     <div class="row page-content">
-        <div class="col s12">
+        <div class="col-sm-12">
             <h2 class="header">Latest blog posts</h2>
         </div>
     </div>
     <div class="row page-content">
-        <div class="col s12 m6 l4">
-            <div class="card horizontal">
-                <div class="card-image">
-                    <img src="http://lorempixel.com/100/190/nature/1">
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p><strong><small>April 19, 2017: Craig Wilson</small></strong></p>
-                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Snap General Election '17</a></h5>
-                        <p>Once more unto the breach...</p>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
-                    <div class="card-action">
-                        <a [routerLink]="['/policy-research/blogs/snap-general-election']">Read more&hellip;</a>
-                    </div>
-                </div>
-            </div>
+                    <md-card-title>
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                            Snap General Election '17
+                        </a>
+                    </md-card-title>
+                    <md-card-subtitle>
+                        April 19, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Craig Wilson</a>
+                    </md-card-subtitle>
+                </md-card-header>
+                <img md-card-image src="http://lorempixel.com/400/70/nature/1">
+                <md-card-content>
+                    <p>
+                        Once more unto the breach&hellip;
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                        Read more
+                    </button>
+                </md-card-actions>
+            </md-card>
         </div>
-        <div class="col s12 m6 l4">
-            <div class="card horizontal">
-                <div class="card-image">
-                    <img src="http://lorempixel.com/100/190/nature/2">
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p><strong><small>April 17, 2017: James Adams</small></strong></p>
-                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Visual impairment and local elections</a></h5>
-                        <p>In the 5th of our local election blog...</p>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
-                    <div class="card-action">
-                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
-                    </div>
-                </div>
-            </div>
+                    <md-card-title>
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                            Visual impairment and local elections
+                        </a>
+                    </md-card-title>
+                    <md-card-subtitle>
+                        April 17, 2017: <a [routerLink]="['/about/staff/craig-wilson']">James Adams</a>
+                    </md-card-subtitle>
+                </md-card-header>
+                <img md-card-image src="http://lorempixel.com/400/70/nature/2">
+                <md-card-content>
+                    <p>
+                        In the 5th of our local election blog&hellip;
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                        Read more
+                    </button>
+                </md-card-actions>
+            </md-card>
         </div>
-        <div class="col s12 m6 l4">
-            <div class="card horizontal">
-                <div class="card-image">
-                    <img src="http://lorempixel.com/100/190/nature/4">
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p><strong><small>April 10, 2017: John Downie</small></strong></p>
-                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Brexit stakes are high for Scotland’s third sector</a></h5>
-                        <p>What next for charities...</p>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
-                    <div class="card-action">
-                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
-                    </div>
-                </div>
-            </div>
+                    <md-card-title>
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                            Brexit stakes are high for Scotland’s third sector
+                        </a>
+                    </md-card-title>
+                    <md-card-subtitle>
+                        April 10, 2017: <a [routerLink]="['/about/staff/craig-wilson']">John Downie</a>
+                    </md-card-subtitle>
+                </md-card-header>
+                <img md-card-image src="http://lorempixel.com/400/70/nature/4">
+                <md-card-content>
+                    <p>
+                        What next for charities&hellip;
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                        Read more
+                    </button>
+                </md-card-actions>
+            </md-card>
         </div>
-        <div class="col s12 m6 l4">
-            <div class="card horizontal">
-                <div class="card-image">
-                    <img src="http://lorempixel.com/100/190/nature/5">
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p><strong><small>April 10, 2017: Amy Dalrymple</small></strong></p>
-                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Open Local Government</a></h5>
-                        <p>In the fourth blog in our series...</p>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
-                    <div class="card-action">
-                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
-                    </div>
-                </div>
-            </div>
+                    <md-card-title>
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                            Open Local Government
+                        </a>
+                    </md-card-title>
+                    <md-card-subtitle>
+                        April 10, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Amy Dalrymple</a>
+                    </md-card-subtitle>
+                </md-card-header>
+                <img md-card-image src="http://lorempixel.com/400/70/nature/5">
+                <md-card-content>
+                    <p>
+                        In the fourth blog in our series&hellip;
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                        Read more
+                    </button>
+                </md-card-actions>
+            </md-card>
         </div>
-        <div class="col s12 m6 l4">
-            <div class="card horizontal">
-                <div class="card-image">
-                    <img src="http://lorempixel.com/100/190/nature/6">
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p><strong><small>April 6, 2017: Tracey Bird</small></strong></p>
-                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Five ways to decide how much to pay your staff</a></h5>
-                        <p>Money, money, money...</p>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <md-card class="example-card">
+                <md-card-header>
+                    <div md-card-avatar class="example-header-image">
+                        <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
-                    <div class="card-action">
-                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
-                    </div>
-                </div>
-            </div>
+                    <md-card-title>
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                            Five ways to decide how much to pay your staff
+                        </a>
+                    </md-card-title>
+                    <md-card-subtitle>
+                        April 6, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Tracey Bird</a>
+                    </md-card-subtitle>
+                </md-card-header>
+                <img md-card-image src="http://lorempixel.com/400/70/nature/6">
+                <md-card-content>
+                    <p>
+                        Money, money, money&hellip;
+                    </p>
+                </md-card-content>
+                <md-card-actions>
+                    <button md-button [routerLink]="['/policy-research/blogs/snap-general-election-17']">
+                        Read more
+                    </button>
+                </md-card-actions>
+            </md-card>
         </div>
     </div>
 </div>
