--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,6 +1,11 @@
 <div class="container-fluid">
+    <div class="row page-content">
+        <div class="col-sm-12">
+            <h2 class="header">Blog post</h2>
+        </div>
+    </div>
     <div class="row">
-        <div class="col s12 page-content">
+        <div class="col-sm-12 page-content">
             <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
         </div>
     </div>
