--- a/src/app/components/static/privacy-and-cookies.component.html
+++ b/src/app/components/static/privacy-and-cookies.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col s12">
+        <div class="col-sm-12">
             <h2 class="page-title">Privacy and Cookie policy</h2>
 
             <h4>1. INTRODUCTION</h4>
