--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,20 +9,20 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <!-- <h5>Contact</h5> -->
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/about']">About SCVO</a></li>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a></li>
+                    <ul class="right">
+                        <li><a [routerLink]="['/about']">About SCVO</a></li>
+                        <li><a [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
+                        <li><a [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
+                        <li><a [routerLink]="['/accessibility']">Accessibility</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <!-- <h5>Contact</h5> -->
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
-                        <li><a class="grey-text text-lighten-3" href="tel:+441314748000">0131 474 8000</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
+                    <ul class="right">
+                        <li><a href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
+                        <li><a href="tel:+441314748000">0131 474 8000</a></li>
+                        <li><a href="https://www.facebook.com/SCVO1939">Facebook</a></li>
+                        <li><a href="https://twitter.com/scvotweet">Twitter</a></li>
                     </ul>
                 </div>
             </div>
