--- a/src/app/components/post/briefing.component.html
+++ b/src/app/components/post/briefing.component.html
@@ -1,10 +1,7 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-12 col-md-10 col-lg-9 page-content">
+        <div class="col-sm-12 page-content">
             <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
-        </div>
-        <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
-
         </div>
     </div>
 </div>
