--- a/src/app/components/static/terms-and-conditions.component.html
+++ b/src/app/components/static/terms-and-conditions.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col s12">
+        <div class="col-sm-12">
             <h2 class="page-title">Terms and conditions</h2>
 
             <p><strong>PLEASE READ THESE TERMS AND CONDITIONS CAREFULLY BEFORE USING THIS SITE</strong></p>
