--- a/src/app/assets/icons/css/_fontello-codes.scss
+++ b/src/app/assets/icons/css/_fontello-codes.scss
@@ -10,7 +10,6 @@
 .fa-bold:before { content: '\e77a'; } /* '' */
 .fa-italic:before { content: '\e77b'; } /* '' */
 .fa-list-alt:before { content: '\e790'; } /* '' */
-.fa-menu:before { content: '\f0c9'; } /* '' */
 .fa-list-bullet:before { content: '\f0ca'; } /* '' */
 .fa-list-numbered:before { content: '\f0cb'; } /* '' */
 .fa-strike:before { content: '\f0cc'; } /* '' */
@@ -26,6 +25,7 @@
 .fa-graduation-cap:before { content: '\f19d'; } /* '' */
 .fa-header:before { content: '\f1dc'; } /* '' */
 .fa-handshake-o:before { content: '\f2b5'; } /* '' */
+.fa-user-circle-o:before { content: '\f2be'; } /* '' */
 .fa-picture:before { content: '🌄'; } /* '\1f304' */
 .fa-credit-card:before { content: '💳'; } /* '\1f4b3' */
 .fa-briefcase:before { content: '💼'; } /* '\1f4bc' */
