--- a/src/app/assets/icons/css/_fontello-ie7.scss
+++ b/src/app/assets/icons/css/_fontello-ie7.scss
@@ -19,7 +19,6 @@
 .fa-bold { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe77a;&nbsp;'); }
 .fa-italic { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe77b;&nbsp;'); }
 .fa-list-alt { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe790;&nbsp;'); }
-.fa-menu { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0c9;&nbsp;'); }
 .fa-list-bullet { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0ca;&nbsp;'); }
 .fa-list-numbered { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0cb;&nbsp;'); }
 .fa-strike { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf0cc;&nbsp;'); }
@@ -35,6 +34,7 @@
 .fa-graduation-cap { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf19d;&nbsp;'); }
 .fa-header { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1dc;&nbsp;'); }
 .fa-handshake-o { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf2b5;&nbsp;'); }
+.fa-user-circle-o { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf2be;&nbsp;'); }
 .fa-picture { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x1f304;&nbsp;'); }
 .fa-credit-card { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x1f4b3;&nbsp;'); }
 .fa-briefcase { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#x1f4bc;&nbsp;'); }
