--- a/src/app/assets/icons/css/_fontello.scss
+++ b/src/app/assets/icons/css/_fontello.scss
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?51640326');
-  src: url('../font/fontello.eot?51640326#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?51640326') format('woff2'),
-       url('../font/fontello.woff?51640326') format('woff'),
-       url('../font/fontello.ttf?51640326') format('truetype'),
-       url('../font/fontello.svg?51640326#fontello') format('svg');
+  src: url('../font/fontello.eot?35976139');
+  src: url('../font/fontello.eot?35976139#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?35976139') format('woff2'),
+       url('../font/fontello.woff?35976139') format('woff'),
+       url('../font/fontello.ttf?35976139') format('truetype'),
+       url('../font/fontello.svg?35976139#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?51640326#fontello') format('svg');
+    src: url('../font/fontello.svg?35976139#fontello') format('svg');
   }
 }
 */
@@ -66,7 +66,6 @@
 .fa-bold:before { content: '\e77a'; } /* '' */
 .fa-italic:before { content: '\e77b'; } /* '' */
 .fa-list-alt:before { content: '\e790'; } /* '' */
-.fa-menu:before { content: '\f0c9'; } /* '' */
 .fa-list-bullet:before { content: '\f0ca'; } /* '' */
 .fa-list-numbered:before { content: '\f0cb'; } /* '' */
 .fa-strike:before { content: '\f0cc'; } /* '' */
@@ -82,6 +81,7 @@
 .fa-graduation-cap:before { content: '\f19d'; } /* '' */
 .fa-header:before { content: '\f1dc'; } /* '' */
 .fa-handshake-o:before { content: '\f2b5'; } /* '' */
+.fa-user-circle-o:before { content: '\f2be'; } /* '' */
 .fa-picture:before { content: '🌄'; } /* '\1f304' */
 .fa-credit-card:before { content: '💳'; } /* '\1f4b3' */
 .fa-briefcase:before { content: '💼'; } /* '\1f4bc' */
