--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -5,31 +5,47 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12 page-content">
-            <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
+        <div class="col-sm-12 col-md-10 col-lg-9 page-content">
+            <!-- <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div> -->
+            <p><strong>April 19, 2017 : Craig Wilson</strong></p>
+
+            <h3 class="stc">Snap General Election ‘17</h3>
+
+            <span class="subheading">Once more unto the breach</span>
+
+            <p>The Prime Minister has surprised the nation by announcing a snap General Election to be held on 8 June 2017.</p>
+            <p>With the introduction of the Fixed Terms Parliament Act, it was expected that incumbents would no longer have the power to call an election when it most suited them.</p>
+            <p>Politically, however, we see how incredibly difficult it is for an opposition party not to hand the Prime Minister the two-thirds majority needed to call a poll. After all, aren’t they meant to be the government in waiting?</p>
+            <p>In a country wearied by elections and referenda, the news has left many feeling a bit like <a href="https://www.theguardian.com/politics/video/2017/apr/18/does-brenda-from-bristol-have-the-best-reaction-to-the-election-news-video" target="_blank">Brenda from Bristol</a>.</p>
+            <p>In Scotland, people will soon have participated in seven polls in three years (and that’s before a potential second independence referendum) and. It’s fair to say many of us really aren’t feeling up to it.</p>
+            <p>Even so, this election comes at a seismic moment in Scottish, British and European politics and will have far reaching ramifications.</p>
+            <h4>Theresa May’s Conservatives</h4>
+            <p>For some, this decision by the (<a href="http://www.newstatesman.com/politics/elections/2017/04/flashback-all-times-theresa-may-said-snap-election-was-terrible-idea" target="_blank">previously reticent</a>) Prime Minister is a cynical ploy to take advantage of opinion polls, which show Labour lagging far behind. But there’s more to it than that.</p>
+            <p>Victory would cement May’s position as a Prime Minister in her own right, provide a mandate for her vision of Brexit and potentially afford a lot more room for political manoeuvre – with any enhanced majority freeing her from the shackles of troublesome backbenchers. In turn, it could significantly colour future policy decisions.</p>
+            <p>If there were to be collateral damage in the form of moderate ‘remainer’ Conservative MPs (which is likely), it would be far easier for the Prime Minister to achieve her ambition of removing the UK from the European Convention on Human Rights in favour of the vaunted British Bill of Rights. It was suggested last year that this would reappear in the Tory 2020 manifesto, however, it may now rear its head much sooner.</p>
+            <p>Such a move would see UK citizens soon removed from the auspices of both the European Court of Justice and the European Court of Human Rights – with untold consequences.</p>
+            <p>This threat was raised in&nbsp;<a href="http://www.scvo.org.uk/blog/human-rights-expert-encourages-third-sector-call-to-arms-on-brexit/" target="_blank">my recent interview</a> with human rights expert, Professor Alan Miller, who urged third sector organisations to defend human rights at this time of unprecedented risk.</p>
+            <h4>Scotland and independence</h4>
+            <p>For the SNP, it will be difficult to replicate their stunning result of 2015 when they took 56 of 59 seats in Scotland. With certain seats in the Borders, Edinburgh and the North East looking somewhat vulnerable, it is possible that unionist voters might rally behind either a Labour, Conservative or Lib Dem candidate to oust a sitting SNP MP.</p>
+            <p>It will be worth watching the tactics at play in more marginal seats as the Yes/No battle lines are redrawn for another electoral contest.</p>
+            <p>As things stand, the SNP are still performing well in polls and will almost certainly return the most Scottish MPs to Westminster. Another strong showing would undoubtedly see intensified demands for a second independence referendum.</p>
+            <p>That said, even a moderate loss of seats will be cited as evidence for a fall in support for independence and could see the issue kicked in to the long grass. The First Minister seems to have anticipated this possibility by arguing that her mandate for a second referendum is iron clad, because the Scottish Parliament has already voted to re-visit the independence question.</p>
+            <h4>Charities</h4>
+            <p>In this election, Scotland’s charities will play a key role in facilitating debate and informing the public about matters of importance to them.</p>
+            <p>Whilst (due to lobbying rules) there are certain dos and don’ts, we strongly encourage you and your members to continue to campaign for what you believe in and not let fear prevent you from carrying out your work.</p>
+            <p>OSCR has published&nbsp;<a href="http://www.oscr.org.uk/news/political-campaigning-guidance-for-charities">guidance on political campaigning</a> which may prove useful. And please feel free to get in touch with us here at SCVO is there is anything we can clarify!</p>
+
+            <div class="alert alert-warning" style="margin-top:30px;">
+                <strong>Important: </strong>
+                Opinions expressed by bloggers are their own and don't represent those of the Scottish Council for Voluntary Organisations.
+            </div>
+
+            <disqus [shortname]="blog" [identifier]="blogID"
+                [url]="customUrl" [categoryId]="catId" [lang]="'en'"
+                (comment)="onComment($event)"></disqus>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 page-content">
-            <div id="disqus_thread"></div>
-            <script>
-            /**
-            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://scottish-council-for-voluntary-organisations.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-            })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
+
         </div>
     </div>
 </div>
