--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,12 +1,11 @@
 <div class="container-fluid">
+    <md-toolbar>
+        <md-toolbar-row class="navbar admin">
+            <ul menu="admin" class="list-inline nav"></ul>
+        </md-toolbar-row>
+    </md-toolbar>
     <div class="row">
         <div class="col-sm-12">
-            <nav>
-                <div class="nav-wrapper">
-                    <ul class="nav navbar-nav left" menu="admin"></ul>
-                </div>
-            </nav>
-
             <div class="section">
                 <router-outlet></router-outlet>
             </div>
