--- a/src/app/components/post/briefing-list.component.html
+++ b/src/app/components/post/briefing-list.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="row page-content">
         <div class="col-sm-12 col-md-6">
-            <md-card class="example-card">
+            <md-card class="briefing-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="briefing-header-image">
                         <span class="fa fa-2x fa-info-circle"></span>
                     </div>
                     <md-card-title>
@@ -43,9 +43,9 @@
             </md-card>
         </div>
         <div class="col-sm-12 col-md-6">
-            <md-card class="example-card">
+            <md-card class="briefing-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="briefing-header-image">
                         <span class="fa fa-2x fa-info-circle"></span>
                     </div>
                     <md-card-title>
@@ -83,9 +83,9 @@
             </md-card>
         </div>
         <div class="col-sm-12 col-md-6">
-            <md-card class="example-card">
+            <md-card class="briefing-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="briefing-header-image">
                         <span class="fa fa-2x fa-info-circle"></span>
                     </div>
                     <md-card-title>
