--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -11,7 +11,7 @@
 
             <h3 class="stc">Snap General Election ‘17</h3>
 
-            <span class="subheading">Once more unto the breach</span>
+            <p class="subheading">Once more unto the breach</p>
 
             <p>The Prime Minister has surprised the nation by announcing a snap General Election to be held on 8 June 2017.</p>
             <p>With the introduction of the Fixed Terms Parliament Act, it was expected that incumbents would no longer have the power to call an election when it most suited them.</p>
@@ -40,7 +40,7 @@
                 Opinions expressed by bloggers are their own and don't represent those of the Scottish Council for Voluntary Organisations.
             </div>
 
-            <disqus [shortname]="blog" [identifier]="blogID"
+            <disqus [shortname]="blog" [identifier]="scottish-council-for-voluntary-organisations"
                 [url]="customUrl" [categoryId]="catId" [lang]="'en'"
                 (comment)="onComment($event)"></disqus>
         </div>
