--- a/src/app/components/post/post-list.component.html
+++ b/src/app/components/post/post-list.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="row page-content">
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <md-card class="example-card">
+            <md-card class="post-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="post-header-image">
                         <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
                     <md-card-title>
@@ -34,9 +34,9 @@
             </md-card>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <md-card class="example-card">
+            <md-card class="post-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="post-header-image">
                         <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
                     <md-card-title>
@@ -62,9 +62,9 @@
             </md-card>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <md-card class="example-card">
+            <md-card class="post-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="post-header-image">
                         <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
                     <md-card-title>
@@ -90,9 +90,9 @@
             </md-card>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <md-card class="example-card">
+            <md-card class="post-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="post-header-image">
                         <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
                     <md-card-title>
@@ -118,9 +118,9 @@
             </md-card>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <md-card class="example-card">
+            <md-card class="post-card">
                 <md-card-header>
-                    <div md-card-avatar class="example-header-image">
+                    <div md-card-avatar class="post-header-image">
                         <span class="fa fa-2x fa-user-circle-o"></span>
                     </div>
                     <md-card-title>
