--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -40,9 +40,7 @@
                 Opinions expressed by bloggers are their own and don't represent those of the Scottish Council for Voluntary Organisations.
             </div>
 
-            <disqus [shortname]="blog" [identifier]="scottish-council-for-voluntary-organisations"
-                [url]="customUrl" [categoryId]="catId" [lang]="'en'"
-                (comment)="onComment($event)"></disqus>
+            <disqus [shortname]="'scottish-council-for-voluntary-organisations'" [lang]="'en'" (comment)="onComment($event)"></disqus>
         </div>
         <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
 
