Made a social share block

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -637,6 +637,32 @@ a.btn {
     display: none;
 }
 
+.share-container {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0;
+    .share-count {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-right: 1rem;
+        margin-right: 1rem;
+        border-right: 2px solid black;
+        h3 {
+            display: flex;
+            flex-direction: column-reverse;
+            font-size: 2.5rem;
+            margin: 0;
+        }
+        b {
+            font-size: .7rem;
+        }
+    }
+}
+.sb-style .sb-count {
+    font-family: $base-font-family !important;
+}
+
 // Admin =======================================================================
 
 .collection {
