--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -9,6 +9,8 @@
             <!-- <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div> -->
             <p><strong>April 19, 2017 : Craig Wilson</strong></p>
 
+            <share-block [totalShare]="0"></share-block>
+
             <h3 class="stc">Snap General Election ‘17</h3>
 
             <p class="subheading">Once more unto the breach</p>
@@ -39,6 +41,8 @@
                 <strong>Important: </strong>
                 Opinions expressed by bloggers are their own and don't represent those of the Scottish Council for Voluntary Organisations.
             </div>
+
+            <share-block [totalShare]="0"></share-block>
 
             <disqus [shortname]="['scottish-council-for-voluntary-organisations']" [lang]="'en'" (comment)="onComment($event)"></disqus>
         </div>
