--- a/src/app/components/post/briefing.component.html
+++ b/src/app/components/post/briefing.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-lg-9 page-content">
+            <share-block [totalShare]="0"></share-block>
+
             <h1>
                 Brexit and Scottish independence: a third sector perspective
             </h1>
@@ -192,6 +194,9 @@
             <p>
                 This quandary will undoubtedly shape the thinking of many third sector organisations in the years ahead and SCVO will continue to play an active role in providing evidence and clarity to encourage and guide discussion in the months and years ahead.
             </p>
+
+            <share-block [totalShare]="0"></share-block>
+
             <h2>Contact</h2>
             <p>
                 Craig Wilson
