--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-sm-12 col-md-10 col-lg-9 page-content">
             <!-- <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div> -->
-            <p><strong>April 19, 2017 : Craig Wilson</strong></p>
+            <p><strong>April 19, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Craig Wilson</a></strong></p>
 
             <share-block [totalShare]="0"></share-block>
 
