Mockup improvements and open search xml added

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -122,6 +122,12 @@ a:not([href]):not([tabindex]):hover {
     text-decoration: underline;
 }
 
+.img-responsive {
+    max-width: 100%;
+    height: auto;
+    display:block
+}
+
 main.projects-campaigns {
     padding: 0;
 }
@@ -422,10 +428,13 @@ header.policy-research, header.policy-research .navbar .dropdown-content, main.p
 }
 main.press-media a,
 main.tags a,
-main.policy-research a {
+main.policy-research a,
+main.policy-research button {
     color: #e64a19 !important;
 }
 
+main.policy-research share-button a,
+main.policy-research share-button button,
 a.btn {
     color: #fff !important;
 }
@@ -586,7 +595,7 @@ a.btn {
 
 // temporary fix for Materialize bug with Mac Chrome -
 // https://github.com/Dogfalo/materialize/issues/3161
-.nav-wrapper, .nav-wrapper form, .nav-wrapper form .input-field { height: 100%; }
+// .nav-wrapper, .nav-wrapper form, .nav-wrapper form .input-field { height: 100%; }
 
 // Breadcrumb ==================================================================
 
